crates/rattler_lock/src/snapshots/rattler_lock__test__v7__pypi_relative_outside_url.yml.snap
---
source: crates/rattler_lock/src/lib.rs
assertion_line: 645
expression: conda_lock
---
version: 7
platforms:
  - name: linux-64
  - name: osx-arm64
  - name: osx-64
  - name: win-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    indexes:
      - "https://pypi.org/simple"
    packages:
      linux-64:
        - pypi: "../my_subdir"
        - pypi: "./"
      osx-64:
        - pypi: "../my_subdir"
        - pypi: "./"
      osx-arm64:
        - pypi: "../my_subdir"
        - pypi: "./"
      win-64:
        - pypi: "../my_subdir"
        - pypi: "./"
packages:
  - pypi: "../my_subdir"
    name: my-subdir
  - pypi: "./"
    name: pixi-repro
    requires_dist:
      - "my-subdir @ file:../my_subdir"
