crates/rattler_lock/src/snapshots/rattler_lock__test__v7__single_source_package.lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      linux-64:
        - conda: my-package
packages:
  - conda: my-package
    name: my-package
    depends:
      - python >=3.8
    license: MIT
