crates/rattler_lock/src/snapshots/rattler_lock__test__v7__source-timestamps-map-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
platforms:
  - name: win-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
      - url: "https://conda.anaconda.org/bioconda/"
    packages:
      win-64:
        - conda_source: "child-package[87dc0b8a] @ child-package"
packages:
  - conda_source: "child-package[87dc0b8a] @ child-package"
    version: 0.1.0
    build: pyhbf21a9e_0
    subdir: noarch
    depends:
      - path
    source_depends:
      path:
        path: foobar
