crates/rattler_lock/src/snapshots/rattler_lock__test__v7__sources-lfs-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
platforms:
  - name: win-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      win-64:
        - conda_source: "child-package[87dc0b8a] @ child-package"
packages:
  - conda_source: "child-package[87dc0b8a] @ child-package"
    version: 0.1.0
    build: pyhbf21a9e_0
    subdir: noarch
    depends:
      - git_lfs
      - git_no_lfs
      - git_plain
    source_depends:
      git_lfs:
        git: "https://github.com/example/baz.git"
        branch: foobar
        lfs: true
      git_no_lfs:
        git: "https://github.com/example/baz.git"
        tag: v0.1.0
        lfs: false
      git_plain:
        git: "https://github.com/example/baz.git"
        rev: deadbeaf
